# sobel

./: .gitignore  CMakeLists.txt  sobel.cpp
include/: sobel.hpp
